Home and Upload

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Docu App</title>
 </head>
 
-<body class="portrait-mode w-full h-full overflow-x-clip bg-[#F0F0F4]">
+<body class="w-full h-full overflow-x-clip bg-[#F0F0F4]">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" class="w-full h-full overflow-x-clip font-poppins"></div>
   <script type="module" src="/src/main.tsx"></script>
